# captura

./: Cargo.toml  README.md
crates/captura-app/: Cargo.toml
crates/captura-app/src/: main.rs
crates/captura-audio/: Cargo.toml
crates/captura-audio/src/: lib.rs
crates/captura-capture/: Cargo.toml
crates/captura-capture/src/: lib.rs
crates/captura-config/: Cargo.toml
crates/captura-config/src/: lib.rs
crates/captura-encoder/: Cargo.toml
crates/captura-encoder/src/: lib.rs
crates/captura-hotkeys/: Cargo.toml
crates/captura-hotkeys/src/: lib.rs
crates/captura-storage/: Cargo.toml
crates/captura-storage/src/: lib.rs
crates/captura-ui/: Cargo.toml
crates/captura-ui/src/: lib.rs
helpers/: record.swift  select-region  select-region.swift
