[workspace]
resolver = "2"
members = [
    "crates/captura-app",
    "crates/captura-capture",
    "crates/captura-encoder",
    "crates/captura-audio",
    "crates/captura-storage",
    "crates/captura-config",
    "crates/captura-hotkeys",
    "crates/captura-ui",
]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
image = "0.25"
notify = "7"
