[package]
name = "captura-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
captura-config = { path = "../captura-config" }
captura-capture = { path = "../captura-capture" }
captura-storage = { path = "../captura-storage" }
captura-hotkeys = { path = "../captura-hotkeys" }
thiserror = { workspace = true }
log = { workspace = true }
tao = "0.31"
tray-icon = "0.19"
libc = "0.2"
